added crg controller job description

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,6 +7,21 @@
     <div class="columns">
       <h1>Jobs</h1>
       <ul>
+
+
+        <li>
+          <h2>
+            <a href="/jobs/controller">
+              Controller
+            </a>
+          </h2>
+          <p>
+            This position will report to the three Cardinal Rose Group partners and will be responsible for performing all accounting functions and financial reporting activities including, but not limited to full cycle G/L, A/R, A/P, T&E, F/A, I/C, cash, the month-end close process and will be responsible for financial statement preparation, management reporting, budgeting and forecasting, treasury management, financial statement audits, income & VAT taxes, and general administration.
+          </p>
+        </li>
+
+
+
 				<li>
 					<h2>
 						<a href="/jobs/salesforce-developer">
@@ -18,13 +33,7 @@
 				</li>
 
         <li>
-          <h2>
-            <a href="/jobs/speaker-manager">
-              Speaker Manager
-            </a>
-          </h2>
-          <p>LendIt, the definitive annual event for the rapidly growing online lending industry is hiring a full-time content manager to support the development of LendIt’s event programs and blog - through speaker acquisition, market research and relationship building.
-          </p>
+
         </li>
 
 
