added todd anderson photo to team page added twitter handles on team page

--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -16,10 +16,9 @@
 							Peter Renton
 						</b>
 						<i>
-							Conference Chairman
+							Conference Chairman<br>
 							@lendacademy
 						</i>
-						@lendacademy
 					</div>
 				</li>
 				<li>
@@ -31,7 +30,8 @@
 							Jason Jones
 						</b>
 						<i>
-							Co-Founder
+							Co-Founder<br>
+							@cardinalrose
 						</i>
 					</div>
 				<li>
@@ -43,13 +43,28 @@
 							Bo Brustkern
 						</b>
 						<i>
-							Co-Founder
+							Co-Founder<br>
+							@brustkern
 						</i>
 					</div>
 				</li>
 				</li>
 			</ul>
 			<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4 lendit-team-level2">
+				<li>
+					<div class="headshot">
+						<img src="https://s3-us-west-2.amazonaws.com/lendit/team/todd-anderson.psd-th.jpeg" />
+					</div>
+					<div class="name-title">
+						<b>
+							Todd Anderson
+						</b>
+						<i>
+							Speaker Manager<br>
+							@ToddGackDutch
+						</i>
+					</div>
+				</li>
 				<li>
 					<div class="headshot">
 						<img src="https://s3-us-west-2.amazonaws.com/lendit/team/emily-eden.psd-th.jpeg" />
@@ -59,7 +74,9 @@
 							Emily Eden
 						</b>
 						<i>
-							Operations &amp; Marketing Assistant
+							Operations &amp; Marketing Assistant<br>
+							@lenditconf<br>
+							@edenandtheapple
 						</i>
 					</div>
 				</li>
@@ -98,7 +115,8 @@
 							Aaron Lua
 						</b>
 						<i>
-							Delegate Affairs Associate
+							Delegate Affairs Associate<br>
+							@TheAaronLua
 						</i>
 					</div>
 				</li>
@@ -111,7 +129,9 @@
 							Ryan Lichtenwald
 						</b>
 						<i>
-							Writer/Analyst
+							Writer/Analyst<br>
+							@LendAcademy<br>
+							@PeerSocialLend
 						</i>
 					</div>
 				</li>
@@ -124,7 +144,8 @@
 							Kat Santiago
 						</b>
 						<i>
-							Web Developer
+							Web Developer<br>
+							@imKatSan
 						</i>
 					</div>
 				</li>
