updated controller salary to negotiatble as per jj

--- a/app/views/jobs/controller.html.erb
+++ b/app/views/jobs/controller.html.erb
@@ -13,7 +13,7 @@
 
       <div class="job-section job-metadata">
         <div><b>Position Type:</b>Full-Time</div>
-        <div><b>Level/Salary:</b> $125,000</div>
+        <div><b>Level/Salary:</b> Negotiable</div>
         <div><b>Start Date:</b> Immediate</div>
         <div><b>Travel Required:</b> Minimal</div>
         <div><b>Hours/Week:</b> 40</div>
