--- a/app/views/sponsors/eu15.html.erb
+++ b/app/views/sponsors/eu15.html.erb
@@ -11,8 +11,14 @@
         LendIt Europe Sponsors
       </div>
       <p class="sponsors-intro-text">The following sponsors have been confirmed for LendIt Europe 2015.&nbsp;
-        <a href="#" style="font-weight:500; " data-reveal-id="sponsors-more-info"><span class="fa fa-arrow-circle-o-down"></span> More info </a>
+        <a href="#" style="font-weight:500; margin-right: 30px;" data-reveal-id="sponsors-more-info"><span class="fa fa-arrow-circle-o-down"></span> More info </a>
+      <a href="/europe/2015/sponsors/guide"><button style="float: right;">
+        Sponsors Guide
+      </button></a>
       </p>
+
+
+
       <div class="sponsors-section">
         <div class="sponsors-section-head">
           Title Sponsor
@@ -209,6 +215,7 @@
 
             <% else %>
               <li>
+
                 <a href="<%= sponsor.url %>" class="sponsors-thumb" target="_blank">
                   <img src="<%= sponsor.logo_img %>" />
                 </a>
@@ -314,8 +321,12 @@
       </div>
 
 
+
     </div>
   </div>
+
+
+
   <div id="sponsors-more-info" class="reveal-modal" data-reveal>
     <div class="row">
       <div class="large-24 columns">
