added speakers guide button to eu15 speakers page

--- a/app/views/speakers/eu15.html.erb
+++ b/app/views/speakers/eu15.html.erb
@@ -20,6 +20,9 @@
             </a>
           </div>
         </div>
+        <a href="/europe/2015/speakers/info"><button style="float: right;">
+          Speakers Guide
+        </button></a>
       </section>
     </div>
   </div>
