--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,9 +46,11 @@
 @import "_conferences/usa15-pitchit";
 @import "_speakers/old-london-speakers";
 @import "_speakers/usa15-speakers";
+@import "_speakers/eu15-speakers";
 @import "_speakers/eu15-speakers-info";
 @import "_sponsors/old-sponsors";
 @import "_sponsors/usa15-sponsors";
+@import "_sponsors/eu15-sponsors";
 @import "_about/old-about-page";
 @import "_about/team";
 @import "_videos/old-video-page";
