--- a/app/views/layouts/_landingfooter.html.erb
+++ b/app/views/layouts/_landingfooter.html.erb
@@ -1,3 +1,5 @@
-<footer>
-  this is the new footer
-</footer>
+<div class="landing-footer">
+	<footer>
+		this is the new footer
+	</footer>
+</div>
