--- a/app/views/speakers/eu15.html.erb
+++ b/app/views/speakers/eu15.html.erb
@@ -1,30 +1,33 @@
 <%= title "LendIt Europe 2015 Speakers Page" %>
 <% meta_description "LendIt Europe 2015 Conference speakers are esteemed European leaders in the peer-to-peer industry." %>
 <% meta_keywords "p2p, online lending, peer-to-peer, LendIt, speakers, presenters, Europe" %>
-<% body_class "usa15-speakers" %>
+<% body_class "eu15-speakers" %>
 
 <div class="general-background" >
   <div class="row">
-    <div class="columns">
-      <section class="speakers-intro">
-        <div class="speakers-intro-left">
-          <h1>LendIt Europe 2015 Speakers</h1>
-        </div>
-        <div class="speakers-intro-right">
-          <div class="speakers-signup">
-            <a href="/europe/2015/speakers/sign-up">
-              <i class="fa fa-arrow-circle-right"></i>
-              <b>
-                Sign Up To Be A Speaker
-              </b>
-            </a>
-          </div>
-        </div>
-        <a href="/europe/2015/speakers/info"><button style="float: right;">
-          Speakers Guide
-        </button></a>
-      </section>
-    </div>
+		<div class="columns">
+			<div class="row header-area">
+				<div class="columns small-24 medium-14 large-14 ">	
+					<h1>LendIt Europe 2015 Speakers</h1>
+				</div>
+				<div class="columns small-24 medium-10 large-10 ">
+					<ul class="header-buttons">
+						<li>
+						<a href="/europe/2015/speakers/sign-up">
+								Sign Up To Be A Speaker
+						</a>
+						</li>
+						<li>
+				<a href="/europe/2015/speakers/info">
+						Speakers Guide
+				</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			
+
+		</div>
   </div>
 
   <div class="row">
