updated links for sponsorship and speakers guide

--- a/app/views/sponsors/eu15.html.erb
+++ b/app/views/sponsors/eu15.html.erb
@@ -18,7 +18,7 @@
 				<div class="columns small-24 medium-8 large-8 ">
 					<ul class="header-buttons">
 						<li>
-							<a href="#" data-reveal-id="sponsors-more-info"> Sponsorship Info </a>
+							<a href="#" data-reveal-id="sponsors-more-info"> Sign Up To Be A Sponsor </a>
 						</li>
 						<li>
 							<a href="/europe/2015/sponsors/guide"> Sponsorship Guide </a>
@@ -26,7 +26,7 @@
 					</ul>
 				</div>
 			</div>
-			
+
 
 			<div class="sponsors-section">
 				<div class="sponsors-section-head">
