I fixed an issue where the popup lacked styles

--- a/app/assets/stylesheets/_speakers/_eu15-speakers.scss
+++ b/app/assets/stylesheets/_speakers/_eu15-speakers.scss
@@ -219,7 +219,7 @@
 	}
 }
 // colorbox
-.usa15-speakers #cboxOverlay {
+.eu15-speakers #cboxOverlay {
 	top: 0 !important;
 	height: 100%;
 	position: absolute;
@@ -231,7 +231,7 @@
 		opacity: 1 !important;
 	}
 }
-.usa15-speakers #colorbox {
+.eu15-speakers #colorbox {
 	font-family:'Open Sans', sans-serif;
 	button {
 		font-family:'Open Sans', sans-serif;
