added sponsors speakers startup companies

--- a/app/views/sponsors/eu15.html.erb
+++ b/app/views/sponsors/eu15.html.erb
@@ -41,7 +41,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
 								<p class="sponsor-modal-description"><%= raw sponsor.description %></p>
@@ -70,7 +70,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
 								<p class="sponsor-modal-description"><%= raw sponsor.description %></p>
@@ -99,7 +99,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
 								<p class="sponsor-modal-description"><%= raw sponsor.description %></p>
@@ -128,7 +128,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<% if sponsor.url? %>
 									<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
@@ -159,7 +159,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<% if sponsor.url? %>
 									<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
@@ -177,7 +177,7 @@
 					<% end %>
 				</ul>
 			</div>
-			<div class="sponsors-section" style="display: none;">
+			<div class="sponsors-section">
 				<div class="sponsors-section-head">
 					Associate Sponsors
 				</div>
@@ -190,7 +190,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= sponsor.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b><%= sponsor.sponsor_level %> Sponsor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= sponsor.logo_img %>" /></p>
 								<% if sponsor.url? %>
 									<p class="sponsor-modal-visit"><a href="<%= raw sponsor.url %>" target="_blank">Visit <%= sponsor.company_name %></a></p>
@@ -221,7 +221,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= company.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <b>Exhibitor</b></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <b>Exhibitor</b></div>
 								<p class="sponsor-modal-thumb"><img src="<%= company.logo_img %>" /></p>
 								<p class="sponsor-modal-visit"><a href="<%= raw company.url %>" target="_blank">Visit <%= company.company_name %></a></p>
 								<p class="sponsor-modal-description"><%= raw company.description %></p>
@@ -237,9 +237,9 @@
 					<% end %>
 				</ul>
 			</div>
-			<div class="sponsors-section" style="display: none;">
+			<div class="sponsors-section">
 				<div class="sponsors-section-head">
-					Start-Up Zone
+					Startup Zone
 				</div>
 				<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3">
 					<% @startups.each do |company| %>
@@ -250,7 +250,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= company.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015 Start-Up</span></div>
+								<div class="sponsor-category"><span>LendIt Europe 2015 Start-Up</span></div>
 								<p class="sponsor-modal-thumb"><img src="<%= company.logo_img %>" /></p>
 								<p class="sponsor-modal-visit"><a href="<%= raw company.url %>" target="_blank">Visit <%= company.company_name %></a></p>
 								<p class="sponsor-modal-description"><%= raw company.description %></p>
@@ -279,7 +279,7 @@
 								</a>
 							</li>
 							<div id="sponsor-modal-<%= company.id %>" class="reveal-modal" data-reveal>
-								<div class="sponsor-category"><span>LendIt USA 2015</span> <%= company.partner_type %> Partner</div>
+								<div class="sponsor-category"><span>LendIt Europe 2015</span> <%= company.partner_type %> Partner</div>
 								<p class="sponsor-modal-thumb"><img src="<%= company.logo_img %>" /></p>
 								<% if company.url? %>
 									<p class="sponsor-modal-visit"><a href="<%= raw company.url %>" target="_blank">Visit <%= company.company_name %></a></p>
