--- a/app/views/speakers/eu15.html.erb
+++ b/app/views/speakers/eu15.html.erb
@@ -6,7 +6,7 @@
 	<div class="row">
 		<div class="columns">
 			<div class="row header-area">
-				<div class="columns small-24 medium-14 large-14 ">	
+				<div class="columns small-24 medium-14 large-14 ">
 					<h1>LendIt Europe 2015 Speakers</h1>
 				</div>
 				<div class="columns small-24 medium-10 large-10 ">
@@ -34,7 +34,7 @@
 					<% @eu15_speakers.each do |speaker| %>
 						<li>
 							<% if speaker.bio? %>
-								<a class="current-speaker cboxElement" href="#<%= raw speaker.first_name %><%= raw speaker.last_name %><%= speaker.id %>">
+								<a class="current-speaker cboxElement" href="#speaker-<%= speaker.id %>">
 									<div class="speaker speaker-featured">
 										<div class="speaker-top">
 											<img src="<%= speaker.img_url %>" class="speaker-image" alt="<%= speaker.first_name %> <%= speaker.last_name %>">
@@ -93,7 +93,7 @@
 					<% @eu15_speakers.each do |speaker| %>
 						<li>
 							<% if speaker.bio? %>
-								<a class="current-speaker cboxElement" href="#<%= raw speaker.first_name %><%= raw speaker.last_name %><%= speaker.id %>">
+								<a class="current-speaker cboxElement" href="#speaker-<%= speaker.id %>">
 									<div class="speaker">
 										<div class="speaker-top">
 											<img src="<%= speaker.img_url %>" class="speaker-image" alt="<%= raw speaker.first_name %> <%= raw speaker.last_name %>">
@@ -109,7 +109,7 @@
 									</div>
 								</a>
 								<div class="speaker-bio" style="display:none;">
-									<div id="<%= raw speaker.first_name %><%= raw speaker.last_name %><%= speaker.id %>" class="speaker-container">
+									<div id="speaker-<%= speaker.id %>" class="speaker-container">
 										<div class="speaker-colorbox-title">LendIt Europe 2015</div>
 										<div class="speaker-top-info">
 											<img src="<%= speaker.img_url %>" class="speaker-image" alt="<%= speaker.first_name %> <%= speaker.last_name %>">
