removed sf dev from index

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -22,7 +22,7 @@
 
 
 
-				<li>
+				<li style="display: none;">
 					<h2>
 						<a href="/jobs/salesforce-developer">
 							Salesforce Developer
