added registration down page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -31,7 +31,8 @@
 					</a>
 				</div>
 				<ul>
-					<li class="orange"><a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register now</a></li>
+					<li class="orange"><a href="/register">Register now</a></li>
+					<!-- <li class="orange"><a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register now</a></li> -->
 				</ul>
 			</div>
 			<div class="columns small-24 medium-8 large-8 conf conf-usa">
