updated link on the europe page and updated text on regdown

--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -28,6 +28,9 @@
 						</span>
 					</li> -->
 					<li class="green">
+						<a href="/register">Register now</a>
+					</li>
+					<li class="green" style="display: none;">
 						<a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register now</a>
 					</li>
 					<li class="green">
