--- a/app/views/welcome/regdown.html.erb
+++ b/app/views/welcome/regdown.html.erb
@@ -7,7 +7,7 @@
     <div class="container">
 
       <p>
-        We're sorry but we registration is down for the moment. We are working hard to fix the problem, and will be back shortly!
+        We're sorry but our registration is down for the moment. We apologize for the inconvenience and are working hard to fix the problem!
       </p>
 
       <p>
