updated eu15 reg link

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -43,9 +43,9 @@
 						</li>
 						<li><a href="/about">About</a></li>
 						<li>
-							<a href="/register">Register</a>
+							<!-- <a href="/register">Register</a> -->
 							<!-- <div class="sold-out">LendIt USA<br>SOLD OUT</div> -->
-							<!-- <a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register</a> -->
+							<a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register</a>
 						</li>
 						<!-- <li class="menu-item menu-item-has-children dropdown">
 							<a title="Register" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true">Register
