--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -27,10 +27,10 @@
 							October 20-21, 2015
 						</span>
 					</li> -->
-					<li class="green">
+<!-- 					<li class="green">
 						<a href="/register">Register now</a>
-					</li>
-					<li class="green" style="display: none;">
+					</li> -->
+					<li class="green">
 						<a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register now</a>
 					</li>
 					<li class="green">
