add admin asst job listing

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -20,6 +20,16 @@
           </p>
         </li>
 
+        <li>
+          <h2>
+            <a href="/jobs/admin-assistant">
+              Administrative Assistant
+            </a>
+          </h2>
+          <p>
+            We are looking for someone friendly to fit our team! This position provides administrative and secretarial support to the LendIt team.
+          </p>
+        </li>
 
 
 				<li style="display: none;">
