add sr events ops job listing

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -31,6 +31,17 @@
           </p>
         </li>
 
+        <li>
+          <h2>
+            <a href="/jobs/sr-events-ops-mgr">
+              Sr. Events Operations Manager
+            </a>
+          </h2>
+          <p>
+            The event operations manager will support the conceptualization, planning and execution of its global conferences, expos and networking events. The ideal candidate has at least 5 years’ experience executing large-scale commercial events with thousands of participants, and is extremely organized, detailed oriented and accustomed to working in a fast-paced environment.
+          </p>
+        </li>
+
 
 				<li style="display: none;">
 					<h2>
