update sr events ops mgr

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -33,7 +33,7 @@
 
         <li>
           <h2>
-            <a href="/jobs/sr-events-ops-mgr">
+            <a href="/jobs/sr-events-operations-manager">
               Sr. Events Operations Manager
             </a>
           </h2>
