--- a/app/views/jobs/sr_events_ops_mgr.html.erb
+++ b/app/views/jobs/sr_events_ops_mgr.html.erb
@@ -58,15 +58,14 @@
         <h2>Qualifications</h2>
         <ul>
           <li>At least 5 years event planning and operations experience working on large-scale event</li>
-          <li>Fluent in spoken and written Mandarin as well as Englis</li>
-          <li>Strong written and verbal communications skill</li>
-          <li>Attention to detai</li>
-          <li>Extremely organize</li>
-          <li>Creative problem solve</li>
-          <li>Excellent time management skill</li>
-          <li>Ability to multitas</li>
-          <li>Proficient in Microsoft Word, Powerpoint & Exce</li>
-          <li>
+          <li>Fluent in spoken and written Mandarin as well as English</li>
+          <li>Strong written and verbal communications skills</li>
+          <li>Attention to detail</li>
+          <li>Extremely organized</li>
+          <li>Creative problem solver</li>
+          <li>Excellent time management skills</li>
+          <li>Ability to multitask</li>
+          <li>Proficient in Microsoft Word, Powerpoint & Excel</li>
         </ul>
 
         <h2>Company Background</h2>
