make edits to admin asst

--- a/app/views/jobs/admin_assistant.html.erb
+++ b/app/views/jobs/admin_assistant.html.erb
@@ -30,7 +30,7 @@
         <h2>
           Role
         </h2>
-        <p>We are looking for someone friendly to fit our team! This position provides administrative and secretarial support to the LendIt team. </p>
+        <p>We are looking for someone friendly to join our team! This position provides administrative and secretarial support to the LendIt team. </p>
 
         <p>Assist the team with these essential functions:</p>
 
@@ -72,7 +72,6 @@
 
         </ul>
 
-        <strong>Candidates who are contacted will need to provide a resume and work samples.</a></strong>
 
       </div>
 
