add company background to admin asst

--- a/app/views/jobs/admin_assistant.html.erb
+++ b/app/views/jobs/admin_assistant.html.erb
@@ -72,6 +72,12 @@
 
         </ul>
 
+        <h2>Company Background</h2>
+
+        <p>LendIt is the definitive annual event for the rapidly growing online lending industry. LendIt hosts three events a year in the USA, UK, and China. Our flagship event, LendIt USA attracts thousands of attendees, hundreds sponsors & exhibitors, and hundreds speakers.</p>
+
+        <p>LendIt employees have an incredible work-life balance with flexible scheduling and the ability to frequently work from home."</p>
+
 
       </div>
 
