add speakers to eu15

--- a/app/views/sponsors/eu15.html.erb
+++ b/app/views/sponsors/eu15.html.erb
@@ -237,7 +237,7 @@
 					<% end %>
 				</ul>
 			</div>
-			<div class="sponsors-section">
+			<div class="sponsors-section" style="display: none;">
 				<div class="sponsors-section-head">
 					Startup Zone
 				</div>
