add harriett baldwin to eu15

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -27,7 +27,7 @@
             </a>
           </h2>
           <p>
-            We are looking for someone friendly to fit our team! This position provides administrative and secretarial support to the LendIt team.
+            We are looking for someone friendly to join our team! This position provides administrative and secretarial support to the LendIt team.
           </p>
         </li>
 
